# flashcards-app

./: .gitignore  LICENCE  README.md  docker-compose.yml
.github/workflows/: smokeshow.yml  test.yml  tests.yml
backend/: .coverage  .coveragerc  Dockerfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/flashcards/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/flashcards/migrations/: 0001_initial.py  0002_flashcard_new_column.py  0003_remove_flashcard_new_column.py  0004_flashcard_new_column.py  0005_remove_flashcard_new_column.py  0006_flashcard_new_column.py  0007_remove_flashcard_new_column.py  0008_alter_flashcard_category.py
backend/reports/coverage/: coverage.xml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  Constants.js  Flashcard.js  FlashcardStyles.css  NewFlashcardForm.js
frontend/src/components/: Flashcard.js  ManageFlashcards.js  NewFlashcardForm.js  StudyFlashcards.js
