[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.9.1",
    "django==5.2.4",
    "django-cors-headers==4.7.0",
    "djangorestframework==3.16.0",
    "drf-spectacular==0.28.0",
    "pyspark==4.0.0",
    "python-dotenv==1.1.1",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
]
